--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1531.0",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.2",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
